tests/neg/semantic_funcptr_call_arity_mismatch.baa
// EXPECT: عدد معاملات نداء 'ف' غير صحيح

صحيح اجمع(صحيح أ, صحيح ب) {
    إرجع أ + ب.
}

صحيح الرئيسية() {
    دالة(صحيح, صحيح) -> صحيح ف = اجمع.
    إرجع ف(١).
}
